# iasa_nlp_course

./: .gitignore  README.md  environment.yaml  environment_gpu.yaml  pyproject.toml  requirements.txt  requirements_gpu.txt
GuestLectures/: Intro_Transformers_LLM.ipynb
GuestLectures/AI_for_defense/: LLMs.ipynb  cv_split.csv
Lecture_1/: Session_1_Intro.ipynb  Session_2_data_gathering.ipynb
Lecture_1/app_src/: Dockerfile  docker-compose.yml  flask_app.py
Lecture_2/: lecture2_text_repr_classic_ml.ipynb
Lecture_3/: Validation.ipynb
Lecture_4/: Recurrent_models.ipynb  Session_2_Regressions_and_Recurrent_models.ipynb
Lecture_5/: Session_1_Transformers.ipynb  Transformers.ipynb
Lecture_6/: Session_1_FineTune.ipynb
Lecture_8/: MLOps.ipynb  gradio_1.py
Lecture_8/fastapi_service/: Dockerfile  docker-compose.yaml  pyproject.toml
Lecture_8/fastapi_service/service/: app.py
