[tool.poetry]
name = "iasa-nlp-course"
version = "0.1.0"
description = ""
authors = ["VSydorskyy <vladimirsydorskyy@gmail.com>"]
readme = "README.md"
packages = [{include = "iasa_nlp_course"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
numpy = "1.25.2"
pandas = "2.0.3"
torch = "2.0.0"
matplotlib = "3.7.3"
seaborn = "0.12.2"
tqdm = "^4.66.1"
langdetect = "^1.0.9"
openpyxl = "^3.1.2"
nltk = "^3.8.1"
sentence-transformers = "^2.2.2"
transformers = "^4.35.0"
beautifulsoup4 = "^4.12.2"
hydra-core = "^1.3.2"
tensorboard = "^2.15.1"
html5lib = "^1.1"
jupyterlab = "^4.0.8"
iso8601 = "^2.1.0"
rfc3339 = "^6.2"
wordcloud = "^1.9.2"
datasets = "^2.14.6"
pyldavis = "^3.4.1"
bertopic = "^0.15.0"
kaggle = "^1.5.16"
spacy = "^3.7.2"
eli5 = "^0.13.0"
torchtext = "0.15.1"
ipywidgets = "^8.1.1"
jupyterlab-widgets = "^3.0.9"
fastparquet = "^2023.10.1"
langid = "^1.1.6"
ydata-profiling = "^4.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
