[tool.poetry]
name = "transformer-predictor"
version = "0.1"
description = ""
authors = ["Anton Bazdyrev"]

[tool.poetry.dependencies]
python = "^3.9"
torch = ">=2.0.0, !=2.0.1, !=2.1.0"
transformers = "==4.32.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"